// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pectin-babelrc appends @babel/plugin-external-helpers to babelrc plugins when missing 1`] = `
Object {
  "babelrc": false,
  "exclude": "node_modules/**",
  "plugins": Array [
    "transform-object-rest-spread",
    "/Users/dylanb/stash/pectin/node_modules/@babel/plugin-external-helpers/lib/index.js",
  ],
  "presets": Array [
    Array [
      "@babel/preset-env",
      Object {
        "modules": false,
      },
    ],
  ],
  "runtimeHelpers": false,
}
`;

exports[`pectin-babelrc creates babelrc plugins if missing 1`] = `
Object {
  "babelrc": false,
  "exclude": "node_modules/**",
  "plugins": Array [
    "/Users/dylanb/stash/pectin/node_modules/@babel/plugin-external-helpers/lib/index.js",
  ],
  "presets": Array [
    Array [
      "@babel/preset-env",
      Object {
        "modules": false,
      },
    ],
  ],
  "runtimeHelpers": false,
}
`;

exports[`pectin-babelrc does not duplicate @babel/plugin-external-helpers in babelrc plugins 1`] = `
Object {
  "babelrc": false,
  "exclude": "node_modules/**",
  "plugins": Array [
    "@babel/plugin-external-helpers",
    "lodash",
  ],
  "presets": Array [
    Array [
      "@babel/preset-env",
      Object {
        "modules": false,
      },
    ],
  ],
  "runtimeHelpers": false,
}
`;

exports[`pectin-babelrc does not pass options to non-configurable presets 1`] = `
Object {
  "babelrc": false,
  "exclude": "node_modules/**",
  "plugins": Array [
    "/Users/dylanb/stash/pectin/node_modules/@babel/plugin-external-helpers/lib/index.js",
  ],
  "presets": Array [
    Array [
      "@babel/preset-env",
      Object {
        "modules": false,
      },
    ],
    "react",
  ],
  "runtimeHelpers": false,
}
`;

exports[`pectin-babelrc enables runtimeHelpers when @babel/runtime is a dep 1`] = `
Object {
  "babelrc": false,
  "exclude": "node_modules/**",
  "plugins": Array [],
  "presets": Array [
    Array [
      "@babel/preset-env",
      Object {
        "modules": false,
      },
    ],
  ],
  "runtimeHelpers": true,
}
`;

exports[`pectin-babelrc finds .babelrc.js config 1`] = `
Object {
  "babelrc": false,
  "exclude": "node_modules/**",
  "plugins": Array [
    "/Users/dylanb/stash/pectin/node_modules/@babel/plugin-external-helpers/lib/index.js",
  ],
  "presets": Array [
    Array [
      "@babel/preset-env",
      Object {
        "modules": false,
      },
    ],
  ],
  "runtimeHelpers": false,
}
`;

exports[`pectin-babelrc finds babel.config.js config 1`] = `
Object {
  "babelrc": false,
  "exclude": "node_modules/**",
  "plugins": Array [
    "/Users/dylanb/stash/pectin/node_modules/@babel/plugin-external-helpers/lib/index.js",
  ],
  "presets": Array [
    Array [
      "@babel/preset-env",
      Object {
        "modules": false,
      },
    ],
  ],
  "runtimeHelpers": false,
}
`;

exports[`pectin-babelrc finds pkg.babel config 1`] = `
Object {
  "babelrc": false,
  "exclude": "node_modules/**",
  "plugins": Array [
    "/Users/dylanb/stash/pectin/node_modules/@babel/plugin-external-helpers/lib/index.js",
  ],
  "presets": Array [
    Array [
      "@babel/preset-env",
      Object {
        "modules": false,
      },
    ],
  ],
  "runtimeHelpers": false,
}
`;

exports[`pectin-babelrc overrides preset modules config 1`] = `
Object {
  "babelrc": false,
  "exclude": "node_modules/**",
  "plugins": Array [
    "/Users/dylanb/stash/pectin/node_modules/@babel/plugin-external-helpers/lib/index.js",
  ],
  "presets": Array [
    Array [
      "@babel/preset-env",
      Object {
        "loose": true,
        "modules": false,
      },
    ],
  ],
  "runtimeHelpers": false,
}
`;

exports[`pectin-babelrc throws an error when .babelrc preset is missing 1`] = `"At least one options-accepting preset (like @babel/preset-env) is required in .babelrc"`;

exports[`pectin-babelrc throws an error when no configurable preset is found 1`] = `"At least one options-accepting preset (like @babel/preset-env) is required in .babelrc"`;

exports[`pectin-babelrc throws an error when pkg.babel preset is missing 1`] = `"At least one options-accepting preset (like @babel/preset-env) is required in \\"babel\\" config block of package.json"`;
